<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Czujnik5</string>
    <string name="ci_nienie">Ciśnienie:</string>
    <string name="temperatura">Temperatura:</string>
    <string name="wilgotno">Wilgotność:</string>
    <string name="_0" tools:ignore="DuplicateDefinition">0</string>
    <string name="od_wie">Odśwież</string>
    <string name="aktualne_dane">Aktualne Dane</string>
    <string name="historia">Historia</string>
    <string name="wykresy">Wykresy</string>
    <string name="stacja_pogodowa">Stacja pogodowa</string>
    <string name="todo">TODO</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mini_stacja_pogodowa">Mini Stacja Pogodowa</string>
    <string name="wilgotno_d">Wilgotnośćd</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
