<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/button2"
        android:background="@drawable/gradient"
        android:layout_width="336dp"
        android:layout_height="92dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="116dp"
        android:textColor="@color/white"
        android:text="@string/aktualne_dane"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="336dp"
        android:layout_height="92dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/gradient"
        android:text="@string/historia"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="336dp"
        android:background="@drawable/gradient"
        android:layout_height="92dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="108dp"
        android:text="@string/wykresy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="383dp"
        android:textColor="@color/white"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/stacja_pogodowa"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />
</androidx.constraintlayout.widget.ConstraintLayout>